v2.4 Code clearing